# veritas

./: .gitignore  ANALYSIS.md  Cargo.toml  DEMO.md  DEVNET.md  EVIDENCE.md  HANDOFF.md  JUDGE.md  PRIOR_ART.md  PRODUCT.md  PROVENANCE.md  README.md  SPEC.md  VISION.md  WEBPROOFS.md
.claude/: launch.json
.github/workflows/: ci.yml
benches/: Cargo.toml  README.md  eval_text.txt
benches/src/: main.rs
client/src/: localnet.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  qwen.rs
demo/: add_markets.py  finalize_seed.py  go.sh  judge_lib.py  judge_setup.py  reclaim_market.py  replenish.py  reseed_evidence.py  seed_all.py  seed_markets.py  show_k2.py  show_resolved.py
demo/web/: README.md  app.html  config.json  dispute.json  index.html  markets.json  serve.py
demos/prediction-market/: README.md  add_markets.py  deploy.sh  finalize_seed.py  go.sh  judge_lib.py  judge_setup.py  market_e2e.py  reclaim_market.py  replenish.py  reseed_evidence.py  seed_all.py  seed_markets.py  show_k2.py  show_resolved.py  submit_real_zktls.py  test_lifecycle.py
demos/prediction-market/docs/: DEMO.md  DEVNET.md  EVIDENCE.md  JUDGE.md  PRODUCT.md  PROVENANCE.md  WEBPROOFS.md
demos/prediction-market/move/: Move.toml
demos/prediction-market/move/sources/: market.move
demos/prediction-market/move/tests/: credential_tests.move  gen_credential_vectors.py  market_tests.move  market_webproof_tests.move  reclaim_tests.move
demos/prediction-market/web/: app.html  config.json  dispute.json  evidence.html  index.html  judge.html  market.html  markets.json  markets.testnet.bak.json  serve.py  slashing.html  style.css  veritas.js  zktls.html
demos/prediction-market/web/demo/: flow.html  index.html  opml.html  try.html
demos/prediction-market/web/demo/assets/: atmos.js  chain_dispute.json  chain_markets.json  proof_coinbase.json  proof_football.json  proof_forex.json  proof_match.json  proof_rocket.json  proof_worldcup.json  verdict_no.sse  verdict_yes.sse  veritas.css
dispute/: Move.toml
dispute/demo/: market_e2e.py
dispute/sources/: bytes_le.move  credential.move  dispute.move  interp.move  market.move  merkle.move  reclaim.move  signed.move  softfloat.move  tee.move
dispute/tests/: credential_tests.move  fqwen_conviction.move  gen_market_vector.py  generated_vectors.move  market_tests.move  market_webproof_tests.move  qwen_conviction.move  reclaim_tests.move  semantics_tests.move  softfloat_vectors.move
game/: Cargo.toml
game/src/: setup.rs
game/tests/: fastrun.rs  fraud_game.rs
gpu/: Cargo.toml
gpu/src/: lib.rs
kernels/: Cargo.toml
kernels/src/: fkernels.rs  lib.rs
models/qwen/: Cargo.toml
models/qwen/artifacts/: ARTIFACT_HASHES.txt  README.md
models/qwen/src/: config.rs  fc.rs  flayout.rs  fmath.rs  fmodel.rs  forward.rs  image.rs  layout.rs  lib.rs  quant.rs  trig.rs
models/toy/: Cargo.toml
models/toy/src/: forward.rs  layout.rs  lib.rs  model.rs
opml/: README.md
opml/benches/: Cargo.toml  README.md  calib_text.txt
opml/client/: Cargo.toml
opml/client/src/: lib.rs  localnet.rs
opml/compiler/src/: fqwen.rs
opml/compiler/tests/: lowering.rs
opml/docs/: SPEC.md
opml/game/src/: actors.rs  chain.rs  driver.rs  lib.rs  trace.rs
opml/game/tests/: genesis_differential.rs
opml/kernels/: Cargo.toml
opml/kernels/src/: fkernels.rs
opml/models/qwen/: fetch-1.7b.sh
opml/models/qwen/src/: fmodel.rs  tensors.rs
opml/models/qwen/tests/: tokenizer.rs
opml/models/toy/src/: luts.rs
opml/move/: Move.toml
opml/move/sources/: dispute.move  genesis.move  interp.move  signed.move  tee.move
opml/move/tests/: genesis_tests.move  interp_guard_tests.move  qwen_conviction.move  softfloat_vectors.move
opml/vm/src/: fixtures.rs  lib.rs  onestep.rs  trace.rs
opml/vm/tests/: onestep.rs
provenance_real/: extract_c2pa.py
tools/reclaim/: gen.mjs  gen_reclaim_vector.py  gen_server.mjs  package-lock.json  package.json  proof_gen.cjs  proof_gen.js  reclaim_vector.json  t.cjs
tools/shot/: README.md  check_demo.mjs  cm.mjs  cmui.mjs  convbuild.mjs  ev.mjs  evtest.mjs  fraud.mjs  inject.mjs  inject_convict.mjs  inject_guided.mjs  inject_lifecycle.mjs  jtest2.mjs  judge.mjs  judge_verify.mjs  judgecustom.mjs  judgetest.mjs  livecards.mjs  market_smoke.mjs  mobile.mjs  modal.mjs  package-lock.json  package.json  pos.mjs  probe.mjs  probe2.mjs  rc.mjs  rsdk.mjs  shot.mjs  slashtest.mjs  txbuild.mjs  zktest.mjs  zktls_verify.mjs  zktls_verify2.mjs  zktls_verify3.mjs
tools/zktls/: README.md
vm/: Cargo.toml
vm/src/: exec.rs  hash.rs  isa.rs  lib.rs  merkle.rs  onestep.rs  softfloat.rs  state.rs
vm/tests/: conformance.rs  onestep.rs
