[package]
name = "gpu"
description = "GPU integer kernels (wgpu/Metal): bit-exact committed semantics on real GPU hardware. Same partial-sum structure as the scalar definition, so equality is provable, not hoped."
edition.workspace = true
version.workspace = true

[dependencies]
vm = { path = "../vm" }
kernels = { path = "../kernels" }
qwen = { path = "../models/qwen" }
wgpu = "26"
pollster = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.32"

# Own lints (not workspace): the FW-6 direct-Metal path reads result
# buffers through metal-rs raw pointers (one audited unsafe), and committed
# FLOAT semantics are this crate's subject. Float use stays file-gated.
[lints.rust]
unsafe_code = "deny" # deny (not forbid): audited allows permitted
[lints.clippy]
float_arithmetic = "deny"
