[package]
name = "qwen"
description = "Qwen3 integer port: config/tensors/quantizer/rotary tables/native runtime (Phase 3)"
edition.workspace = true
version.workspace = true

[dependencies]
vm = { path = "../../vm" }
toy-model = { path = "../toy" } # reuses the integer LUT generators
serde_json.workspace = true
# Vendored-file tokenizer wrapper (brief 3.2 allows wrapping); offline only.
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
kernels = { path = "../../kernels" }

[lints]
workspace = true

[dev-dependencies]
sha3.workspace = true
